adding a string for password protecting hidden items

--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -186,6 +186,7 @@
     <string name="medium">Vidutinis</string>
     <string name="large">Didelis</string>
     <string name="extra_large">Ypaè didelis</string>
+    <string name="password_protect_hidden_items">Password protect hidden item visibility</string>
 
     <!-- About -->
     <string name="about">Apie</string>
