--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -188,6 +188,7 @@
     <string name="medium">Нормальный</string>
     <string name="large">Крупный</string>
     <string name="extra_large">Очень крупный</string>
+    <string name="password_protect_hidden_items">Password protect hidden item visibility</string>
 
     <!-- About -->
     <string name="about">О приложении</string>
