--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -186,6 +186,7 @@
     <string name="medium">Medium</string>
     <string name="large">Large</string>
     <string name="extra_large">Extra large</string>
+    <string name="password_protect_hidden_items">Password protect hidden item visibility</string>
 
     <!-- About -->
     <string name="about">Hakkında</string>
