--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -186,6 +186,7 @@
     <string name="medium">Medium</string>
     <string name="large">Groß</string>
     <string name="extra_large">Sehr groß</string>
+    <string name="password_protect_hidden_items">Password protect hidden item visibility</string>
 
     <!-- About -->
     <string name="about">Über</string>
