--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -186,6 +186,7 @@
     <string name="medium">Közepes</string>
     <string name="large">Nagy</string>
     <string name="extra_large">Óriási</string>
+    <string name="password_protect_hidden_items">Password protect hidden item visibility</string>
 
     <!-- About -->
     <string name="about">Információ</string>
