--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -186,6 +186,7 @@
     <string name="medium">通常</string>
     <string name="large">大</string>
     <string name="extra_large">特大</string>
+    <string name="password_protect_hidden_items">Password protect hidden item visibility</string>
 
     <!-- About -->
     <string name="about">アプリについて</string>
