--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -186,6 +186,7 @@
     <string name="medium">Średnia</string>
     <string name="large">Duża</string>
     <string name="extra_large">Bardzo duża</string>
+    <string name="password_protect_hidden_items">Password protect hidden item visibility</string>
 
     <!-- About -->
     <string name="about">O aplikacji</string>
