--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -186,6 +186,7 @@
     <string name="medium">Medium</string>
     <string name="large">Grande</string>
     <string name="extra_large">Muito grande</string>
+    <string name="password_protect_hidden_items">Password protect hidden item visibility</string>
 
     <!-- About -->
     <string name="about">Acerca</string>
