--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -190,6 +190,7 @@
     <string name="medium">Stredné</string>
     <string name="large">Veľké</string>
     <string name="extra_large">Extra veľké</string>
+    <string name="password_protect_hidden_items">Uzamknúť viditeľnosť skrytých položiek heslom</string>
 
     <!-- About -->
     <string name="about">O aplikácií</string>
