--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -44,13 +44,13 @@
     <string name="moving_success_partial">Niektóre pliki nie mogą być przeniesione</string>
     <string name="copying_success_partial">Niektóre pliki nie mogą być skopiowane</string>
     <string name="no_files_selected">Nie wybrano żadnych plików</string>
-    <string name="saving">Zapsisuję&#8230;</string>
+    <string name="saving">Zapisuję&#8230;</string>
 
     <!-- Create new -->
     <string name="create_new">Utwórz nowy</string>
     <string name="folder">Folder</string>
     <string name="file">Plik</string>
-    <string name="create_new_folder">Stwórz nowy folder</string>
+    <string name="create_new_folder">Utwórz nowy folder</string>
     <string name="name_taken">Folder lub plik o tej nazwie już istnieje</string>
     <string name="invalid_name">Nazwa zawiera niedozwolone znaki</string>
     <string name="empty_name">Wpisz nazwę</string>
@@ -165,16 +165,16 @@
 
     <!-- Times -->
     <plurals name="seconds">
-        <item quantity="one">%1$d second</item>
-        <item quantity="other">%1$d seconds</item>
+        <item quantity="one">%1$d sekunda</item>
+        <item quantity="other">%1$d sekund(y)</item>
     </plurals>
     <plurals name="minutes">
-        <item quantity="one">%1$d minute</item>
-        <item quantity="other">%1$d minutes</item>
+        <item quantity="one">%1$d minuta</item>
+        <item quantity="other">%1$d minut(y)</item>
     </plurals>
     <plurals name="hours">
-        <item quantity="one">%1$d hour</item>
-        <item quantity="other">%1$d hours</item>
+        <item quantity="one">%1$d godzina</item>
+        <item quantity="other">%1$d godzin(y)</item>
     </plurals>
 
     <!-- Settings -->
@@ -186,7 +186,7 @@
     <string name="medium">Średnia</string>
     <string name="large">Duża</string>
     <string name="extra_large">Bardzo duża</string>
-    <string name="password_protect_hidden_items">Password protect hidden item visibility</string>
+    <string name="password_protect_hidden_items">Zabezpiecz ukryte elementy</string>
 
     <!-- About -->
     <string name="about">O aplikacji</string>
