--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -162,6 +162,7 @@
     <string name="insert_pattern">畫出解鎖圖形</string>
     <string name="wrong_pattern">解鎖圖形錯誤</string>
     <string name="repeat_pattern">再次畫出解鎖圖形</string>
+    <string name="protection_setup_successfully">Password setup successfully. Please reinstall the app in case you forget it.</string>
 
     <!-- Times -->
     <plurals name="seconds">
